fixed spacing issue in header, and added profile page (empty)

--- a/React/app/src/components/MarketTile.scss
+++ b/React/app/src/components/MarketTile.scss
@@ -5,6 +5,7 @@
     display: flex;
     padding: 10px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .flexbox_internal {
@@ -17,7 +18,6 @@
 }
 
 .border_glasses_tile {
-    border: solid 2px black;
     border-radius: 5px; 
     overflow: hidden;
 }
