--- a/React/app/src/components/SiteHeader.scss
+++ b/React/app/src/components/SiteHeader.scss
@@ -1,21 +1,20 @@
 // variables
 
 // spacing
-.flexbox {
+.header_frame {
+    padding: 10px 30px;     
+    margin: 0 auto;    
+    background-color: var(--contrast);
+}
+
+.flexbox_header {
     display: flex;
-    padding: 10px;
     justify-content: space-between;
 }
 
 .flexbox_internal {
     display: flex;
     align-items: center;
-}
-
-.header_frame {
-    padding: 15px 30px;     
-    margin: 0 auto;    
-    background-color: var(--contrast);
 }
 
 .logo_placeholder {
